# web-shell

./: CMakeLists.txt
src/: main.cpp
src/WebShell/: Application.cpp  Application.h  WidgetSpecification.h  WidgetWindow.cpp  WidgetWindow.h  constants.h
templates/: constants.h.in
web-shell-js-bridge/: CMakeLists.txt  main.cpp
